Final calulator.  Added more edge cases.  Fixed display overflow

--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 body{
     background-color: #C4C5BA;
     font-family:Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
 }
 
 .full-body {
@@ -15,12 +17,20 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
 }
 
 .heading {
     color: black;
     font-size: 50px;
     padding: 50px;
+}
+
+.display-box {
+    width: 320px;
+    display: flex;
 }
 
 .calculator-body {
@@ -58,6 +68,9 @@ body{
     border: 3px outset #1B1B1B;
     box-shadow: 2px 2px #C4C5BA;
     align-content: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 button {
